p' calculation and output to forcing improved. now symmetric wrt. to topographic symmetry

--- a/wrf_sounding.ipynb
+++ b/wrf_sounding.ipynb
@@ -425,8 +425,8 @@
    "outputs": [],
    "source": [
     "# set basic characteristics\n",
-    "nrz    = 10    # vertically use only every nrz-th entry from above arrays (to preserve space) for LR forcing\n",
-    "nrx    = 10    # horizontally only use every nrx-th entry for LR forcing\n",
+    "nrz    = 4    # vertically use only every nrz-th entry from above arrays (to preserve space) for LR forcing\n",
+    "nrx    = 4    # horizontally only use every nrx-th entry for LR forcing\n",
     "\n",
     "# choose nx and ny large enough so that n < 2*smthwindow+1 where smoothing window is the number of cells\n",
     "# icar smooths the wind field over\n",
@@ -479,10 +479,42 @@
     "xs_hr   = np.arange(-nx/2,nx/2,1)*dx\n",
     "xx, xy  = np.meshgrid(lons_hr,lats_hr)\n",
     "\n",
-    "# calculate LR grid and add a buffer that is ddeg*nrx/2.0 around the HR domain\n",
-    "lons_lr = np.linspace(np.min(lons_hr)-ddeg/2.0*nrx,np.max(lons_hr)+ddeg/2.0*nrx,nx_lr)\n",
-    "lats_lr = np.linspace(np.min(lats_hr)-ddeg/2.0*nrx,np.max(lats_hr)+ddeg/2.0*nrx,ny_lr)\n",
-    "xx_lr, xy_lr  = np.meshgrid(lons_lr,lats_lr)"
+    "# generate HR topography here so that we can find the domain center easily\n",
+    "# (important for symmetry reasons)\n",
+    "hgt_m    = np.zeros(ny*nx).reshape(ny,nx)\n",
+    "# generate HR topography\n",
+    "for k in range(nx):\n",
+    "    #hgt_m[:,k] = get_topo(x=xs_hr[k],a0=1000.,a1=20000.,topo='witch')\n",
+    "    hgt_m[:,k] = get_topo(x=xs_hr[k],a0=a0,a1=a1,topo='witch')\n",
+    "    \n",
+    "\n",
+    "# LR forcing needs to be centered at Ndc\n",
+    "Nlondcr = int(np.floor(nx_lr/2))    # center forcing domain longitude around this grid cell\n",
+    "Nlatdcr = int(np.floor(ny_lr/2))    # \n",
+    "ddeglr  = ddeg*(nrx+0.09)\n",
+    "\n",
+    "print('grid points in HR: {:3n} x {:3n}'.format(nx,ny))\n",
+    "print('            in LR: {:3n} x {:3n}'.format(nx_lr,ny_lr))\n",
+    "print('    center around: n = {:n} corresponding to {:2.1f} deg.'.format(Nlondcr,lonc))\n",
+    "\n",
+    "\n",
+    "# calculate LR grid which is centered around lonc and latc\n",
+    "lons_lr = np.arange(-Nlondcr,Nlondcr+1.0,1.0)*ddeglr+lonc\n",
+    "lats_lr = np.arange(-Nlatdcr,Nlatdcr+1.0,1.0)*ddeglr+latc\n",
+    "xx_lr, xy_lr  = np.meshgrid(lons_lr,lats_lr)\n",
+    "\n",
+    "if lons_lr[0] >= lons_hr[0] or lons_lr[-1] <= lons_hr[-1]:\n",
+    "    print('minimal or maximum longitude is equal do ICAR domain boundary!')\n",
+    "    print('  {:2.6f} !>= {:2.6f}'.format(lons_lr[0],lons_hr[0]))\n",
+    "    print('  {:2.6f} !<= {:2.6f}'.format(lons_lr[-1],lons_hr[-1]))\n",
+    "    \n",
+    "if lats_lr[0] >= lats_hr[0] or lats_lr[-1] <= lats_hr[-1]:\n",
+    "    print('minimal or maximum latitude is equal do ICAR domain boundary!')\n",
+    "    print('  {:2.6f} !>= {:2.6f}'.format(lats_lr[0],lats_hr[0]))\n",
+    "    print('  {:2.6f} !<= {:2.6f}'.format(lats_lr[-1],lats_hr[-1]))\n",
+    "    \n",
+    "print('HR domain extension: {:2.6f} - {:2.6f}'.format(lons_hr[0],lons_hr[-1]))\n",
+    "print('LR domain extension: {:2.6f} - {:2.6f}'.format(lons_lr[0],lons_lr[-1]))"
    ]
   },
   {
@@ -491,10 +523,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f,ax = plt.subplots(1,1,dpi=100)\n",
-    "ax.scatter(xx,xy,s=0.5)\n",
-    "ax.scatter(xx_lr,xy_lr,s=12,marker='x')\n",
-    "ax.set_xlim(86,87)\n",
+    "f,axarr = plt.subplots(2,2,dpi=200,figsize=(10,8))\n",
+    "axarr[0,0].scatter(xx,xy,s=0.5)\n",
+    "axarr[0,0].scatter(xx_lr,xy_lr,s=12,marker='x')\n",
+    "axarr[0,0].set_xlim(86.2,86.5)\n",
+    "axarr[0,0].set_ylim(0.75,1.0)\n",
+    "\n",
+    "axarr[0,1].scatter(xx,xy,s=0.5)\n",
+    "axarr[0,1].scatter(xx_lr,xy_lr,s=12,marker='x')\n",
+    "axarr[0,1].set_xlim(89.7,90.3)\n",
+    "axarr[0,1].axvline(x=lons_hr[int(nx/2)],c='black',lw=0.5)\n",
+    "axarr[1,0].scatter(xx,xy,s=0.5)\n",
+    "axarr[1,0].scatter(xx_lr,xy_lr,s=12,marker='x')\n",
+    "axarr[1,0].set_xlim(93,94)\n",
+    "f.suptitle('do the orange crosses encompass the blue dots without overlap at the borders?\\n if so try adjusting the multipicaltor in ddeglr calculation!',fontsize=14)\n",
+    "plt.tight_layout(rect=[0.0,0.0,1.0,0.93])\n",
     "#ax.set_xlim(93,94)\n",
     "#ax.set_ylim(0.75,1.0)"
    ]
@@ -530,16 +573,10 @@
     "# HR data\n",
     "xlong_m  = np.zeros(ny*nx).reshape(ny,nx) # set\n",
     "xlat_m   = np.zeros(ny*nx).reshape(ny,nx) # set\n",
-    "hgt_m    = np.zeros(ny*nx).reshape(ny,nx) # set\n",
     "landmask = np.zeros(ny*nx).reshape(ny,nx)\n",
     "\n",
     "xlong_m = xx\n",
-    "xlat_m  = xy\n",
-    "\n",
-    "# generate HR topography\n",
-    "for k in range(nx):\n",
-    "    #hgt_m[:,k] = get_topo(x=xs_hr[k],a0=1000.,a1=20000.,topo='witch')\n",
-    "    hgt_m[:,k] = get_topo(x=xs_hr[k],a0=a0,a1=a1,topo='witch')"
+    "xlat_m  = xy"
    ]
   },
   {
@@ -572,7 +609,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# run this if p' should be incorporated to ICAR p-field (from calinsol)"
+    "# run this if p' should be incorporated to ICAR p-field (from calinsol)\n",
+    "A actual analytical calculation might eventually be better since it may be adjusted to new topographies on the fly."
    ]
   },
   {
@@ -588,7 +626,7 @@
     "\n",
     "#cis_ds = xa.open_dataset('./input_data/calinsol_270_20_0.0100_1.00_dx2000_dz=50.nc')\n",
     "cis_ds = xa.open_dataset('./input_data/calinsol_270_20_0.0100_1.00_dx2000_dz=50.nc')\n",
-    "ciscs_ds = cis_ds.sel(south_north=50)\n"
+    "ciscs_ds = cis_ds.sel(south_north=50)"
    ]
   },
   {
@@ -620,87 +658,8 @@
    "outputs": [],
    "source": [
     "plt.plot(hgt_m[0,:],marker='o',markersize=4)\n",
-    "plt.plot(ciscs_ds.topo.values,marker='x',markersize=4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### continue here to generate a p' file for a ICAR run with the forcing and topography defined above\n",
-    "The idea is to read this file in with an adapted version of ICAR and add p' on top of the interpolated ICAR pressured field. This seems necessary since ICAR currently does not calculate p' by itself and any such adaption would take up a lot of time. So this is a *workaround* essentially"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generate z_array that contains elevations of ICAR\n",
-    "dz_icar    = 200.0\n",
-    "nz_icar    = 100\n",
-    "z_arr_icar = np.zeros(nx*nz_icar).reshape(nz_icar,nx)\n",
-    "\n",
-    "\n",
-    "for k in range(0,nx):\n",
-    "    hx            = ciscs_ds.topo[k]\n",
-    "    z_arr_icar[0,k] = hx+dz_icar/2.0\n",
-    "    for i in range(1,nz_icar):\n",
-    "        z_arr_icar[i,k] = z_arr_icar[i-1,k]+dz_icar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reinterpolate the HR pressure perturbation to the ICAR grid that's going to be used\n",
-    "pp_hr  = np.zeros(nx*nz_icar).reshape(nz_icar,nx)\n",
-    "for k in range(0,nx):\n",
-    "    pp_cis_f = interpolate.interp1d(ciscs_ds.z[:,k],ciscs_ds.p[:,k],fill_value='extrapolate',kind='linear') #np.interp(z_arr[::nrz],ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis])\n",
-    "    pp_cis = pp_cis_f(z_arr_icar[:,k])\n",
-    "    pp_hr[:,k] = pp_cis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f,axarr = plt.subplots(1,2,dpi=200)\n",
-    "axarr[0].pcolormesh(ciscs_ds.p)\n",
-    "axarr[1].pcolormesh(pp_hr)\n",
-    "axarr[0].set_title('p\\' analytical')\n",
-    "axarr[1].set_title('p\\' interpolated to ICAR grid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "icar_pprime_ds\t= xa.Dataset(\n",
-    "                        data_vars={\n",
-    "                            'PPERTURBED':(['bottom_top','west_east'],pp_hr),\n",
-    "                        },\n",
-    "                        coords={\n",
-    "                            'bottom_top':np.arange(0,nz_icar,1.0),\n",
-    "                            'west_east':np.arange(0,nx,1.0),\n",
-    "                        }\n",
-    "                    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "icar_pprime_ds.to_netcdf('icar_pprime_{:2.0f}_a1_{:2.0f}{:s}.nc'.format(a0,a1,outfile.replace('input_sounding','')),format='NETCDF4')"
+    "plt.plot(ciscs_ds.topo.values,marker='x',markersize=4)\n",
+    "plt.title('The topographies have to overlap!')"
    ]
   },
   {
@@ -708,7 +667,7 @@
    "metadata": {},
    "source": [
     "### continue here to generate reference data to include p' in forcing\n",
-    "So far this hasn't worked properly"
+    "The pressure perturbation p' is to be included in the ICAR forcing in the field PB."
    ]
   },
   {
@@ -718,7 +677,7 @@
    "outputs": [],
    "source": [
     "# reinterpolate the HR pressure perturbation to a regular grid that goes down to z = 0 \n",
-    "pp_hr  = np.zeros(nx*nz).reshape(nz,nx) # set\n",
+    "pp_hr     = np.zeros(nx*nz).reshape(nz,nx) # set\n",
     "for k in range(0,nx):\n",
     "    pp_cis_f = interpolate.interp1d(ciscs_ds.z[:,k],ciscs_ds.p[:,k],fill_value='extrapolate',kind='linear') #np.interp(z_arr[::nrz],ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis])\n",
     "    pp_cis = pp_cis_f(z_arr)\n",
@@ -731,30 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_lr  = np.zeros(ny_lr*nx_lr*nlvls).reshape(nlvls,ny_lr,nx_lr) # set\n",
-    "ppz_lr = np.zeros(ny_lr*nx_lr*nlvls).reshape(nlvls,ny_lr,nx_lr) # elevations where pp_lr is defined\n",
-    "\n",
-    "dk_offset = int(dnmax_h/nrx)\n",
-    "for i in range(ny_lr):\n",
-    "    for k in range(dk_offset,nx_lr):\n",
-    "        kcis = (k-dk_offset)*nrx\n",
-    "        #print(kcis,' ',k,' ',nrx,' ',dnmax_h)\n",
-    "        if kcis >= Nx_ciscs:\n",
-    "            kcis = Nx_ciscs-1\n",
-    "        if kcis <= 0:\n",
-    "            kcis = 0\n",
-    "            \n",
-    "        # test different kind of interpolation - if z_arr[::nrz] contained values smaller than the smallest entries\n",
-    "        # in ciscs_ds.z[:,kcis], then it extrapolated with constant values. However, it absolutely should extrapolate\n",
-    "        # at least linearly.\n",
-    "        # pp_cis = np.interp(z_arr[::nrz],ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis]) # old interpolation\n",
-    "        # pphr = 0.5*(ciscs_ds.p[:,kcis+1]+ciscs_ds.p[:,kcis])\n",
-    "        #pphr = ciscs_ds.p[:,kcis]\n",
-    "        \n",
-    "        #pp_cis_f = interpolate.interp1d(ciscs_ds.z[:,kcis],pphr,fill_value='extrapolate',kind='linear') #np.interp(z_arr[::nrz],ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis])\n",
-    "        #pp_cis = pp_cis_f(z_arr[::nrz])\n",
-    "        #pp_lr[:,i,k] = pp_cis\n",
-    "        pp_lr[:,i,k] = pp_hr[::nrz,kcis]  # offset is to \n"
+    "Ndc_cis = np.argmin(np.abs(ciscs_ds.topo.values-1000.0))"
    ]
   },
   {
@@ -763,18 +699,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kcis=20*nrx\n",
+    "# reinterpolate HR pressure perturbation to forcing x\n",
+    "# calinsol must have the same grid spacing as HR data\n",
+    "pp_tofrcx = np.zeros(nx_lr*nz).reshape(nz,nx_lr)\n",
     "\n",
-    "pp_cis_f = interpolate.interp1d(ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis],fill_value='extrapolate',kind='slinear') #np.interp(z_arr[::nrz],ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis])\n",
-    "pp_cis = pp_cis_f(z_arr[::nrz])\n",
+    "for k in range(0,nz):\n",
+    "    pp_cis_f = interpolate.interp1d(lons_hr,pp_hr[k,:],fill_value='extrapolate',kind='linear')\n",
+    "    pp_cis = pp_cis_f(lons_lr)\n",
+    "    pp_tofrcx[k,:] = pp_cis\n",
     "\n",
-    "f,axarr = plt.subplots(1,2,dpi=200,figsize=(12,4))\n",
+    "# and eventually - interpolate to z-levels at every forcing x\n",
+    "pp_lr  = np.zeros(ny_lr*nx_lr*nlvls).reshape(nlvls,ny_lr,nx_lr) # set\n",
     "\n",
-    "axarr[0].plot(z_arr[::nrz],pp_cis,marker='o',markersize=4,label='interpolated')\n",
-    "axarr[0].plot(ciscs_ds.z[:,kcis],ciscs_ds.p[:,kcis],marker='x',markersize=4,label='source')\n",
-    "axarr[1].plot(z_arr[::nrz],z_arr[::nrz],label='interpolated',marker='o',markersize=2)\n",
-    "axarr[1].plot(ciscs_ds.z[:,kcis],ciscs_ds.z[:,kcis],marker='x',markersize=1,label='source')\n",
-    "axarr[1].legend()\n"
+    "for k in range(0,nx_lr):\n",
+    "    pp_cis_f = interpolate.interp1d(z_arr,pp_tofrcx[:,k],fill_value='extrapolate',kind='linear')\n",
+    "    for i in range(0,ny_lr):\n",
+    "        pp_cis = pp_cis_f(ph[0,:,i,k])\n",
+    "        pp_lr[:,i,k] = pp_cis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f,axarr=plt.subplots(1,2,dpi=200)\n",
+    "axarr[0].pcolormesh(pp_hr)\n",
+    "axarr[1].pcolormesh(pp_tofrcx)"
    ]
   },
   {
@@ -786,6 +738,8 @@
     "f,axarr = plt.subplots(1,2,figsize=(6,3),dpi=100)\n",
     "axarr[0].pcolormesh(pp_lr[:,0,:])\n",
     "axarr[1].pcolormesh(ciscs_ds.p)\n",
+    "axarr[0].set_title('downsampled p\\'')\n",
+    "axarr[1].set_title('calinsol p\\'')\n",
     "plt.tight_layout()"
    ]
   },
@@ -823,24 +777,24 @@
     "ax2 = f.add_subplot(gs[1])\n",
     "ax3 = f.add_subplot(gs[2])\n",
     "\n",
-    "ax1.plot(range(nx_lr),pp_lr_extracted,label='p\\' along h(x)',marker='o')\n",
-    "ax1.plot(range(nx_lr),pp_lr[0,0,:],label='p\\' along surface h=0 (extrapolated)',marker='s')\n",
+    "ax1.plot(lons_lr,pp_lr_extracted,label='p\\' along h(x)',marker='o')\n",
+    "ax1.plot(lons_lr,pp_lr[0,0,:],label='p\\' along surface h=0 (extrapolated)',marker='s')\n",
     "ax1.set_ylim(-150,150)\n",
     "ax1.grid(color='gray',ls='dotted',lw=0.5)\n",
     "ax1.legend()\n",
     "\n",
-    "ax2.plot(np.array(range(nx))/nrx,pp_hr_extracted,label='p\\' along h(x)')\n",
-    "ax2.plot(np.array(range(nx))/nrx,pp_hr[0,:],label='p\\' along surface h=0 (extrapolated)')\n",
+    "ax2.plot(lons_hr,pp_hr_extracted,label='p\\' along h(x)')\n",
+    "ax2.plot(lons_hr,pp_hr[0,:],label='p\\' along surface h=0 (extrapolated)')\n",
     "ax2.set_ylim(-150,150)\n",
     "ax2.grid(color='gray',ls='dotted',lw=0.5)\n",
     "ax2.legend()\n",
     "\n",
-    "ax3.plot(np.array(range(nx))/nrx,hgt_m[0,:])\n",
-    "ax3.grid(color='gray',ls='dotted',lw=0.5,c='darkgray')\n",
+    "ax3.plot(lons_hr,hgt_m[0,:])\n",
+    "ax3.grid(color='gray',ls='dotted',lw=0.5)\n",
     "\n",
-    "ax1.axvline(x=20.2,c='black',lw=0.5)\n",
-    "ax2.axvline(x=20.2,c='black',lw=0.5)\n",
-    "ax3.axvline(x=20.2,c='black',lw=0.5)"
+    "ax1.axvline(x=lonc,c='black',lw=0.5)\n",
+    "ax2.axvline(x=lonc,c='black',lw=0.5)\n",
+    "ax3.axvline(x=lonc,c='black',lw=0.5)"
    ]
   },
   {
@@ -930,7 +884,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icar_sounding_ds.to_netcdf('./icar_sounding_pdashnew{:s}.nc'.format(outfile.replace('input_sounding','')),format='NETCDF4')\n",
+    "icar_sounding_ds.to_netcdf('./icar_sounding_pprime{:s}.nc'.format(outfile.replace('input_sounding','')),format='NETCDF4')\n",
     "icar_hr_ds.to_netcdf('./icar_hr_a0_{:2.0f}_a1_{:2.0f}{:s}.nc'.format(a0,a1,outfile.replace('input_sounding','')),format='NETCDF4')"
    ]
   },
@@ -940,7 +894,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.min(xy)-ddeg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "icar_hr_ds.XLONG_M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "icar_hr_ds.XLAT_M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "icar_sounding_ds.XLAT"
    ]
   },
   {
